--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#e6e6fa"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
