--- a/_config.yml
+++ b/_config.yml
@@ -78,12 +78,12 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#e6e6fa"
+topbar_color                              : "#4682b4"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#e6e6fa"
+cover_overlay_color                       : "#4682b4"
 cover_overlay_transparency                : 0.8
 
 device_color                              : blue                                     # Set to: blue, black, yellow, coral or white.
@@ -96,11 +96,11 @@ app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
 app_description_color                     : "#ffffff"
 
-feature_title_color                       : "#000000"
+feature_title_color                       : "#4682b4"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#4682b4"
+feature_icons_background_color            : "#4682b4"
 
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
